Gave sidebar a z-index to fix overlap issue on mobile devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
         position: sticky;
         bottom: 0;
         max-height: 100vh;
+        z-index: 1;
     }
 
     .container-page {
